--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation libs.appcompat
@@ -35,5 +36,6 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation project(':mylib1')
+    //implementation 'com.github.PhilibertRakotoasimbola:emoney5:1.0'
+    implementation 'com.github.PhilibertRakotoasimbola:emoney5:1.0'
 }
